# my_health

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.sh  go.mod  go.sum  main.go  package.json
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: holidays.rs  icon.rs  lib.rs  main.rs  menu.rs  reminder.rs  state.rs  storage.rs
